; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/core/extr_inet.c_inet_chksum.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/core/extr_inet.c_inet_chksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @inet_chksum(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @LWIP_CHKSUM(i8* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  br label %9

9:                                                ; preds = %13, %2
  %10 = load i32, i32* %5, align 4
  %11 = ashr i32 %10, 16
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %9
  %14 = load i32, i32* %5, align 4
  %15 = and i32 %14, 65535
  %16 = load i32, i32* %5, align 4
  %17 = ashr i32 %16, 16
  %18 = add nsw i32 %15, %17
  store i32 %18, i32* %5, align 4
  br label %9

19:                                               ; preds = %9
  %20 = load i32, i32* %5, align 4
  %21 = and i32 %20, 65535
  %22 = xor i32 %21, -1
  ret i32 %22
}

declare dso_local i32 @LWIP_CHKSUM(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
